k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gophprofile
  labels:
    app.kubernetes.io/name: gophprofile
    app.kubernetes.io/instance: gophprofile
    app.kubernetes.io/component: namespace
    app.kubernetes.io/part-of: gophprofile
    app.kubernetes.io/managed-by: kubectl
